<resources>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- content_main / ContentMain  == activity_main / MainActivity -->
    <string name="app_name">My Application</string>
    <string name="title_activity_main">Password Generator</string>
    <string name="password_copied">password copied</string>
    <string name="no_password">no password</string>
    <string name="updated_password_list">updated password list</string>
    <string name="action">Action</string>
    <string name="set_the_character_types">Set the character types</string>
    <string name="set_password_size">Set password size (max 30)</string>
    <string name="and_set_password_size"> and set password size (max 30)</string>
    <string name="characters_special">!@#$%*()+=-/.,[]?;:\</string>
    <string name="characters_letters">qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM</string>
    <string name="characters_numbers">0123456789</string>
    <string name="password_label">password</string>
    <string name="password">Password</string>
    <string name="size">Size</string>
    <string name="letters">Letters</string>
    <string name="numbers">Numbers</string>
    <string name="special">Special</string>
    <string name="generate">generate</string>
    <string name="save_password">save password</string>
    <string name="title_save_password_activity">Save Password</string>
    <string name="empty_entries">empty entries</string>
    <string name="password_list">Password List</string>
    <string name="text_no_passwords">You dont have saved passwords.  \n To add a password click (...) and then click (+)</string>

    <!-- save_password_activity / SavePassowordActivity -->
    <string name="password_save_password">Password*</string>
    <string name="username_save_password">Username</string>
    <string name="description_save_password">Description</string>
    <string name="title_save_password">Title*</string>
    <string name="button_save_password">Save Password</string>
    <string name="save_sucess_save_password">Password saved successfully!</string>
    <string name="save_not_sucess_save_password">Error saving password :(</string>
    <string name="title_dialog_delete_password_save_password">Delete Password</string>
    <string name="text_confirmation_dialog_delete_password_save_password">you really want to delete the password?</string>
    <string name="delete_sucess_save_password">Password deleted successfully!</string>
    <string name="required_save_password">* required</string>

    <!-- lock_screen_activity / LockScreenActivity -->
    <string name="intro_register_password_lock_screen">You dont have a registered default password, so register a password to access the application.</string>
    <string name="title_lock_screen">Access the Application</string>
    <string name="access_allowed">Access allowed.</string>
    <string name="access_denied">Access denied.</string>
    <string name="type_your_password">Type your passoword</string>
    <string name="confirm_password">Confirm the Password</string>
    <string name="password_not_match">passwords do not match</string>
    <string name="password_save_successfully">password saved successfully</string>

    <!-- settings_activity / SettingsActivity -->
    <string name="settings_title">Settings</string>
    <string name="change_password_settings">Change password</string>
    <string name="current_password_settings">Current password</string>
    <string name="new_password_settings">New password</string>
    <string name="confirm_password_settings">Confirm password</string>
    <string name="button_change_password_settings">change password</string>
    <string name="type_new_password_settings">type the new password</string>
    <string name="type_current_password_settings">type the current password</string>
    <string name="confirm_new_password_settings">confirm the new password</string>
    <string name="wrong_current_password_settings">current password is incorrect</string>
    <string name="not_match_password_settings">passwords do not match</string>
    <string name="password_changed_success_settings">password changed successfully</string>
    <string name="share_passwords_settings">Share passwords</string>
    <string name="info_about_share_passwords_settings">To share and/or store passwords saved for backup</string>
    <string name="passwords_backup_settings">PASSWORDS BACKUP:\n\n</string>
    <string name="title_to_share_setting">TITLE: </string>
    <string name="username_to_share_setting">USERNAME: </string>
    <string name="password_to_share_setting">PASSWORD: </string>
    <string name="description_to_share_setting">DESCRIPTION: </string>
    <string name="dont_have_password_settings">You dont have passwords to share</string>
    <string name="change_theme_settings">Change theme</string>
    <string name="select_color_theme_info_title">Select the theme color of the application</string>


</resources>
