<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".view.MainActivity"
    tools:showIn="@layout/activity_main"
    android:orientation="vertical"
    android:layout_margin="15dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/ed_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title_save_password" />


        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_title">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/ed_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username_save_password" />


        </android.support.design.widget.TextInputLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/cl_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_username">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/ed_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password" />


                </android.support.design.widget.TextInputLayout>

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/iv_copy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:src="@drawable/ic_copy"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@+id/til_password"
                    app:layout_constraintEnd_toStartOf="@+id/iv_hide_open"
                    app:layout_constraintTop_toTopOf="@+id/til_password" />

                <ImageView
                    android:id="@+id/iv_hide_open"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_down_color_primary"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_copy"
                    app:layout_constraintEnd_toEndOf="@+id/til_password"
                    app:layout_constraintTop_toTopOf="@+id/iv_copy" />


        </android.support.constraint.ConstraintLayout>


        <LinearLayout
            android:id="@+id/ll_generate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop_save_password_activity"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/ed_password">

                <EditText
                    android:id="@+id/ed_size"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/custom_edit_text"
                    android:inputType="number"
                    android:maxLength="2"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_size"
                    app:layout_constraintStart_toEndOf="@+id/tv_size"
                    app:layout_constraintTop_toTopOf="@+id/tv_size" />

                <TextView
                    android:id="@+id/tv_size"
                    android:layout_width="wrap_content"
                    android:layout_height="18dp"
                    android:text="@string/size"
                    android:layout_marginRight="5dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ed_password" />

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/cb_letters"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="?attr/colorPrimary"
                    android:checked="true"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_size"
                    app:layout_constraintEnd_toStartOf="@+id/tv_letters"
                    app:layout_constraintTop_toTopOf="@+id/tv_size" />

                <TextView
                    android:id="@+id/tv_letters"
                    android:layout_width="wrap_content"
                    android:layout_height="22dp"
                    android:text="@string/letters"
                    app:layout_constraintBottom_toBottomOf="@+id/cb_letters"
                    app:layout_constraintEnd_toStartOf="@+id/cb_numbers"
                    app:layout_constraintTop_toTopOf="@+id/cb_letters" />

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/cb_numbers"
                    android:layout_width="31dp"
                    android:layout_height="wrap_content"
                    android:buttonTint="?attr/colorPrimary"
                    android:checked="true"
                    app:layout_constraintBottom_toBottomOf="@+id/cb_letters"
                    app:layout_constraintEnd_toStartOf="@+id/tv_numbers"
                    app:layout_constraintTop_toTopOf="@+id/cb_letters" />

                <TextView
                    android:id="@+id/tv_numbers"
                    android:layout_width="wrap_content"
                    android:layout_height="22dp"
                    android:text="@string/numbers"
                    app:layout_constraintBottom_toBottomOf="@+id/cb_numbers"
                    app:layout_constraintEnd_toStartOf="@+id/cb_special"
                    android:layout_marginRight="5dp"
                    app:layout_constraintTop_toTopOf="@+id/cb_numbers" />

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/cb_special"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="?attr/colorPrimary"
                    android:checked="true"
                    app:layout_constraintBottom_toBottomOf="@+id/cb_numbers"
                    app:layout_constraintEnd_toStartOf="@+id/tv_special"
                    app:layout_constraintTop_toTopOf="@+id/cb_numbers" />

                <TextView
                    android:id="@+id/tv_special"
                    android:layout_width="wrap_content"
                    android:layout_height="22dp"
                    android:text="@string/special"
                    app:layout_constraintBottom_toBottomOf="@+id/cb_special"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/cb_special" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_generate"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/custom_buttom"
            android:text="@string/generate"
            android:textColor="#FFFFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_size" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_generate" >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/ed_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description_save_password" />


        </android.support.design.widget.TextInputLayout>



        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/custom_buttom"
            android:text="@string/save_password"
            android:textColor="#FFFFFFFF"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_description"
            />

        <TextView
            android:id="@+id/tv_no_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/text_no_passwords"
            android:textAlignment="center"
            android:textColor="?attr/colorPrimary"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tv_lv_passwords"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorPrimary"
            android:textSize="25sp"
            android:visibility="visible"
            android:layout_marginLeft="10dp"
            android:text="@string/password_list"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent">

                <ListView
                    android:id="@+id/lv_passwords"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"/>


        </ScrollView>

</LinearLayout>