<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SavePasswordActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_title_save_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ed_title_save_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_save_password" />


        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_username_save_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_title_save_password">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ed_username_save_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_save_password" />


        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password_save_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_username_save_password">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ed_password_save_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_save_password" />


        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_description_save_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_password_save_password">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ed_description_save_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description_save_password" />


        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_save_save_password"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop_save_password_activity"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/custom_buttom"
            android:text="@string/button_save_password"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_description_save_password" />

        <Button
            android:id="@+id/btn_delete_save_password"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/ic_delete"
            app:layout_constraintBottom_toBottomOf="@+id/btn_save_save_password"
            app:layout_constraintStart_toEndOf="@+id/btn_save_save_password"
            app:layout_constraintTop_toTopOf="@+id/btn_save_save_password" />

        <TextView
            android:id="@+id/tv_required_save_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/required_save_password"
            app:layout_constraintEnd_toEndOf="@+id/btn_save_save_password"
            app:layout_constraintTop_toBottomOf="@+id/btn_save_save_password" />


    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>